Agregamos lo que queremos que sea el header

--- a/index.html
+++ b/index.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<title>Pagina de Polar</title>
+	<meta charset="utf-8"/>
+	<title>Polar</title>
+
+	<!-- Estilos de CSS -->
+		<link rel="stylesheet" type="text/css" href="css/styles.css">
+
+	<!-- jQery   -->
+
+	<!-- Mis Scrips -->
+
+
 </head>
 <body>
-	<h1>Hola mundo !!</h1>
-	<h2>hagamos un cambio en lo que le entendemos</h2>
+	<!-- <h1>Hola mundo !!</h1> -->
+	<!-- <h2>hagamos un cambio en lo que le entendemos</h2> -->
+	<section id="global">
+		<header>
+		<!-- CABEZERA     -->
+			<div id="logo">
+				<h1>Xavier Vargas</h1>
+			</div>
+			<div class="clearfix"></div>
+			<nav id="menu">
+				<ul >
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="#">Algo</a></li>
+					<li><a href="#">Sobre mi</a></li>
+					<li><a href="#">Algo</a></li>
+				</ul>
+				<ul id="redes">
+					 <li>   <a id="link" href="#"><img src="img/in.png" width="35px" height="35px" > </a></li> <!--Linkedin -->
+					<li><a id="git" href="#"><img src="img/git.png" width="35px" height="35px"></a></li>	<!--Github -->
+					<li><a id="web" href="#"><img src="img/web.png" width="35px" height="35px"></a></li> <!--pagina web -->
+				</ul>
+			</nav>
+		</header>
+
+		<!-- Slider -->
+		<div id="slider">
+			
+		</div>
+
+		<div id="general">
+
+		</div>
+
+
+
+
+
+	</section>
 </body>
 </html>
