Agregamos un tipo de banner

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Estilos de CSS -->
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 
-	<!-- jQery   -->
+	<!-- jQuery   -->
 
 	<!-- Mis Scrips -->
 
@@ -40,7 +40,9 @@
 
 		<!-- Slider -->
 		<div id="slider">
-			
+			<div id="banner">
+			<img src="img/banner.jpg"  >
+			</div>
 		</div>
 
 		<div id="general">
