Ajustamos alguos colores agregamos lo del contenido en teoria

--- a/index.html
+++ b/index.html
@@ -14,39 +14,69 @@
 
 </head>
 <body>
+	<!-- Redes lateral -->
+	<ul id="redes">
+		<li><a id="link" href="#"><img src="img/in.png" width="35px" height="35px" > </a></li> <!--Linkedin -->
+		<li><a id="git" href="#"><img src="img/git.png" width="35px" height="35px"></a></li>	<!--Github -->
+		<li><a id="web" href="#"><img src="img/web.png" width="35px" height="35px"></a></li> <!--pagina web -->
+	</ul>
 	<!-- <h1>Hola mundo !!</h1> -->
 	<!-- <h2>hagamos un cambio en lo que le entendemos</h2> -->
 	<section id="global">
-		<header>
+		<header id="head">
 		<!-- CABEZERA     -->
 			<div id="logo">
 				<h1>Xavier Vargas</h1>
 			</div>
 			<div class="clearfix"></div>
 			<nav id="menu">
-				<ul >
+				<ul class="menu2" >
 					<li><a href="index.html">Inicio</a></li>
 					<li><a href="#">Algo</a></li>
 					<li><a href="#">Sobre mi</a></li>
 					<li><a href="#">Algo</a></li>
 				</ul>
-				<ul id="redes">
-					 <li>   <a id="link" href="#"><img src="img/in.png" width="35px" height="35px" > </a></li> <!--Linkedin -->
-					<li><a id="git" href="#"><img src="img/git.png" width="35px" height="35px"></a></li>	<!--Github -->
-					<li><a id="web" href="#"><img src="img/web.png" width="35px" height="35px"></a></li> <!--pagina web -->
-				</ul>
 			</nav>
 		</header>
-
 		<!-- Slider -->
 		<div id="slider">
 			<div id="banner">
 			<img src="img/banner.jpg"  >
 			</div>
 		</div>
+		<!-- General en Teoria  -->
+		<div id="general1">
+			<div id="Cuadrado1">
+				<div id="TextCudrado1">
+					<h1>Titulo</h1>
+					<h2>Subtititulo</h2>
 
-		<div id="general">
+				</div>
+			</div>
+			<div id="Cuadrado2">
+				<div id="TextCudrado2">
+					<h1>Titulo</h1>
+					<h2>Subtititulo</h2>
 
+				</div>
+			</div>
+		</div>
+		<!-- General en Teoria2  -->
+		<div  id="general2" >
+			<div id="Cuadrado3">
+				<div id="TextCudrado1">
+					<h1>Titulo</h1>
+					<h2>Subtititulo</h2>
+
+				</div>
+			</div>
+			<div id="Cuadrado4">
+				<div id="TextCudrado2">
+					<h1>Titulo</h1>
+					<h2>Subtititulo</h2>
+
+				</div>
+			</div>
 		</div>
 
 
