agregamos el info.html para el ajax

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<title>Polar</title>
 
 	<!-- Estilos de CSS -->
-		<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
 	<!-- jQuery   -->
+	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 
 	<!-- Mis Scrips -->
-
+	<script type="text/javascript" src="js/main.js"></script>
 
 </head>
 <body>
@@ -32,7 +33,7 @@
 			<nav id="menu">
 				<ul class="menu2" >
 					<li><a href="index.html">Inicio</a></li>
-					<li><a href="#">Algo</a></li>
+					<li><a href="#">Java</a></li>
 					<li><a href="#">Sobre mi</a></li>
 					<li><a href="#">Algo</a></li>
 				</ul>
@@ -65,15 +66,19 @@
 		<div  id="general2" >
 			<div id="Cuadrado3">
 				<div id="TextCudrado1">
-					<h1>Titulo</h1>
-					<h2>Subtititulo</h2>
+					<h1>Ajax</h1>
+					<p id="texto_cambio">AJAX significa JavaScript asíncrono y XML (Asynchronous JavaScript and XML).
+						 Es un conjunto de técnicas de desarrollo web que permiten que las aplicaciones
+						  web funcionen de forma asíncrona, procesando cualquier solicitud al servidor en segundo plano.
+					</p>
+					<button type="button" id="id_ajax" >Change Content</button>
 
 				</div>
 			</div>
 			<div id="Cuadrado4">
 				<div id="TextCudrado2">
-					<h1>Titulo</h1>
-					<h2>Subtititulo</h2>
+					<h1>Tamaño de pantalla</h1>
+					<p id="tamaño">Datos</p>
 
 				</div>
 			</div>
@@ -82,7 +87,7 @@
 
 
 
-
 	</section>
 </body>
 </html>
+
