Lo logramos cambiaos ese pequeño cuadro de Ajax

--- a/text/info.html
+++ b/text/info.html
@@ -1,3 +1,5 @@
 <h1>Hola </h1>
 <p>Hemos cambiado el texto con Ajax</p>
 <h2>Creo</h2>
+<p>Esperemos que aqui puedamos hacer otro tipo de peticiones por lo cual aqui agregaremos mas botones y peticiones </p>
+<h3>  :D </h3>
