falto agregar las redes y una retraso al cambio del boton

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
 	<!-- Redes lateral -->
 	<ul id="redes">
-		<li><a id="link" href="#"><img src="img/in.png" width="35px" height="35px" > </a></li> <!--Linkedin -->
-		<li><a id="git" href="#"><img src="img/git.png" width="35px" height="35px"></a></li>	<!--Github -->
-		<li><a id="web" href="#"><img src="img/web.png" width="35px" height="35px"></a></li> <!--pagina web -->
+		<li><a id="link" href="https://www.linkedin.com/in/xavier-polar-09751b1a4/"><img src="img/in.png" width="35px" height="35px" > </a></li> <!--Linkedin -->
+		<li><a id="git" href="https://github.com/XavierPolar"><img src="img/git.png" width="35px" height="35px"></a></li>	<!--Github -->
+		<li><a id="web" href="http://polarxavier.me/"><img src="img/web.png" width="35px" height="35px"></a></li> <!--pagina web -->
 	</ul>
 	<!-- <h1>Hola mundo !!</h1> -->
 	<!-- <h2>hagamos un cambio en lo que le entendemos</h2> -->
