agregamos php al proyecto

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
 						  web funcionen de forma asíncrona, procesando cualquier solicitud al servidor en segundo plano.
 					</p>
 					<button type="button" id="id_ajax" >Change Content</button>
+					<!-- Botton para intentar el Ajax php  -->
+					<h2>Objeto XMLHttpRequest</h2>
+					<h3>Escribe para la sugerencia de nombres: </h3>
+					<p>Sugerencias <span id="sugerencia"></span></p> 
+					<p>Nombre : <input type="text" id="txt1" onkeyup="showHint(this.value)"></p>
+					<button type="button" id="id_ajax2" >Sugerencia de Nombres con PHP</button>
 
 				</div>
 			</div>
