--- a/text/info.html
+++ b/text/info.html
@@ -1,5 +1,8 @@
-<h1>Hola </h1>
-<p>Hemos cambiado el texto con Ajax</p>
+<h1>Hola esta es una peticion XMLHttp </h1>
+<p>Hemos cambiado el texto con Ajax usando GET</p>
 <h2>Creo</h2>
 <p>Esperemos que aqui puedamos hacer otro tipo de peticiones por lo cual aqui agregaremos mas botones y peticiones </p>
 <h3>  :D </h3>
+
+https://www.w3schools.com/js/tryit.asp?filename=tryjs_ajax_suggest_php
+https://www.w3schools.com/js/js_ajax_php.asp
