--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 			<nav id="menu">
 				<ul class="menu2" >
 					<li><a href="index.html">Inicio</a></li>
-					<li><a href="#">Java</a></li>
-					<li><a href="#">Sobre mi</a></li>
+					<li><a href="#">Javascript</a></li>
+					<li><a href="about.html">Sobre mi</a></li>
 					<li><a href="#">Algo</a></li>
 				</ul>
 			</nav>
@@ -46,49 +46,28 @@
 			</div>
 		</div>
 		<!-- General en Teoria  -->
-		<div id="general1">
-			<div id="Cuadrado1">
-				<div id="TextCudrado1">
-					<h1>Titulo</h1>
-					<h2>Subtititulo</h2>
+		<div id="tecnologias">
+			<h2>Conocimientos</h2>
+			<div id="tecnos">
+				<ul>
+					<li><img src="./img/angular.png"><h3>Angular</h3></li>
+					<li><img src="./img/html.png"><h3>HTML</h3></li>
+					<li><img src="./img/css.png"><h3>CSS</h3></li>
+					<li><img src="./img/js.png"><h3>JScript</h3></li> 
+					
+				</ul>
+				<ul>
+					<li><img src="./img/node.png"><h3>Node Js</h3></li>
+					<li><img src="./img/php.png"><h3>PHP</h3></li>
+					<li><img src="./img/sql.png"><h3>SQL</h3></li>
+					<li><img src="./img/mysql.png"><h3> MySQL</h3></li>
 
-				</div>
-			</div>
-			<div id="Cuadrado2">
-				<div id="TextCudrado2">
-					<h1>Titulo</h1>
-					<h2>Subtititulo</h2>
+				</ul>
 
-				</div>
 			</div>
+
 		</div>
-		<!-- General en Teoria2  -->
-		<div  id="general2" >
-			<div id="Cuadrado3">
-				<div id="TextCudrado1">
-					<h1>Ajax</h1>
-					<p id="texto_cambio">AJAX significa JavaScript asíncrono y XML (Asynchronous JavaScript and XML).
-						 Es un conjunto de técnicas de desarrollo web que permiten que las aplicaciones
-						  web funcionen de forma asíncrona, procesando cualquier solicitud al servidor en segundo plano.
-					</p>
-					<button type="button" id="id_ajax" >Change Content</button>
-					<!-- Botton para intentar el Ajax php  -->
-					<h2>Objeto XMLHttpRequest</h2>
-					<h3>Escribe para la sugerencia de nombres: </h3>
-					<p>Sugerencias <span id="sugerencia"></span></p> 
-					<p>Nombre : <input type="text" id="txt1" onkeyup="showHint(this.value)"></p>
-					<button type="button" id="id_ajax2" >Sugerencia de Nombres con PHP</button>
-
-				</div>
-			</div>
-			<div id="Cuadrado4">
-				<div id="TextCudrado2">
-					<h1>Tamaño de pantalla</h1>
-					<p id="tamaño">Datos</p>
-
-				</div>
-			</div>
-		</div>
+		
 
 
 
